Libretro.NET/Bindings/RetroBindings.cs


        [NativeTypeName("const char *")]
        public sbyte* label;
    }

    public unsafe partial struct retro_core_option_definition
    {
        [NativeTypeName("const char *")]
        public sbyte* key;

        [NativeTypeName("const char *")]
        public sbyte* desc;

        [NativeTypeName("const char *")]
        public sbyte* info;

        [NativeTypeName("struct retro_core_option_value [128]")]
        public _values_e__FixedBuffer values;

        [NativeTypeName("const char *")]
        public sbyte* default_value;

        public partial struct _values_e__FixedBuffer
        {
            public retro_core_option_value e0;
            public retro_core_option_value e1;
            public retro_core_option_value e2;
            public retro_core_option_value e3;
            public retro_core_option_value e4;
            public retro_core_option_value e5;
            public retro_core_option_value e6;
            public retro_core_option_value e7;
            public retro_core_option_value e8;
            public retro_core_option_value e9;
            public retro_core_option_value e10;
            public retro_core_option_value e11;
            public retro_core_option_value e12;
            public retro_core_option_value e13;
            public retro_core_option_value e14;
            public retro_core_option_value e15;
            public retro_core_option_value e16;
            public retro_core_option_value e17;
            public retro_core_option_value e18;
            public retro_core_option_value e19;
            public retro_core_option_value e20;
            public retro_core_option_value e21;
            public retro_core_option_value e22;
            public retro_core_option_value e23;
            public retro_core_option_value e24;
            public retro_core_option_value e25;
            public retro_core_option_value e26;
            public retro_core_option_value e27;
            public retro_core_option_value e28;
            public retro_core_option_value e29;
            public retro_core_option_value e30;
            public retro_core_option_value e31;
            public retro_core_option_value e32;
            public retro_core_option_value e33;
            public retro_core_option_value e34;
            public retro_core_option_value e35;
            public retro_core_option_value e36;
            public retro_core_option_value e37;
            public retro_core_option_value e38;
            public retro_core_option_value e39;
            public retro_core_option_value e40;
            public retro_core_option_value e41;
            public retro_core_option_value e42;
            public retro_core_option_value e43;
            public retro_core_option_value e44;
            public retro_core_option_value e45;
            public retro_core_option_value e46;
            public retro_core_option_value e47;
            public retro_core_option_value e48;
            public retro_core_option_value e49;
            public retro_core_option_value e50;
            public retro_core_option_value e51;
            public retro_core_option_value e52;
            public retro_core_option_value e53;
            public retro_core_option_value e54;
            public retro_core_option_value e55;
            public retro_core_option_value e56;
            public retro_core_option_value e57;
            public retro_core_option_value e58;
            public retro_core_option_value e59;
            public retro_core_option_value e60;
            public retro_core_option_value e61;
            public retro_core_option_value e62;
            public retro_core_option_value e63;
            public retro_core_option_value e64;
            public retro_core_option_value e65;
            public retro_core_option_value e66;
            public retro_core_option_value e67;
            public retro_core_option_value e68;
            public retro_core_option_value e69;
            public retro_core_option_value e70;
            public retro_core_option_value e71;
            public retro_core_option_value e72;
            public retro_core_option_value e73;
            public retro_core_option_value e74;
            public retro_core_option_value e75;
            public retro_core_option_value e76;
            public retro_core_option_value e77;
            public retro_core_option_value e78;
            public retro_core_option_value e79;
            public retro_core_option_value e80;
            public retro_core_option_value e81;
            public retro_core_option_value e82;
            public retro_core_option_value e83;
            public retro_core_option_value e84;
            public retro_core_option_value e85;
            public retro_core_option_value e86;
            public retro_core_option_value e87;
            public retro_core_option_value e88;
            public retro_core_option_value e89;
            public retro_core_option_value e90;
            public retro_core_option_value e91;
            public retro_core_option_value e92;
            public retro_core_option_value e93;
            public retro_core_option_value e94;
            public retro_core_option_value e95;
            public retro_core_option_value e96;
            public retro_core_option_value e97;
            public retro_core_option_value e98;
            public retro_core_option_value e99;
            public retro_core_option_value e100;
            public retro_core_option_value e101;
            public retro_core_option_value e102;
            public retro_core_option_value e103;
            public retro_core_option_value e104;
            public retro_core_option_value e105;
            public retro_core_option_value e106;
            public retro_core_option_value e107;
            public retro_core_option_value e108;
            public retro_core_option_value e109;
            public retro_core_option_value e110;
            public retro_core_option_value e111;
            public retro_core_option_value e112;
            public retro_core_option_value e113;
            public retro_core_option_value e114;
            public retro_core_option_value e115;
            public retro_core_option_value e116;
            public retro_core_option_value e117;
            public retro_core_option_value e118;
            public retro_core_option_value e119;
            public retro_core_option_value e120;
            public retro_core_option_value e121;
            public retro_core_option_value e122;
            public retro_core_option_value e123;
            public retro_core_option_value e124;
            public retro_core_option_value e125;
            public retro_core_option_value e126;
            public retro_core_option_value e127;

            public unsafe ref retro_core_option_value this[int index]
            {
                get
                {
                    fixed (retro_core_option_value* pThis = &e0)
                    {
                        return ref pThis[index];
                    }
                }
            }
        }
    }

    public unsafe partial struct retro_core_options_intl
    {
        [NativeTypeName("struct retro_core_option_definition *")]
        public retro_core_option_definition* us;

        [NativeTypeName("struct retro_core_option_definition *")]
        public retro_core_option_definition* local;
    }

    public unsafe partial struct retro_game_info
    {
        [NativeTypeName("const char *")]
        public sbyte* path;

        [NativeTypeName("const void *")]
        public void* data;

        [NativeTypeName("size_t")]
        public UIntPtr size;

        [NativeTypeName("const char *")]
        public sbyte* meta;
    }

    public unsafe partial struct retro_framebuffer
    {
        [NativeTypeName("void *")]
        public void* data;

        [NativeTypeName("unsigned int")]
        public uint width;

        [NativeTypeName("unsigned int")]
        public uint height;

        [NativeTypeName("size_t")]
        public UIntPtr pitch;

        [NativeTypeName("enum retro_pixel_format")]
        public retro_pixel_format format;

        [NativeTypeName("unsigned int")]
        public uint access_flags;

        [NativeTypeName("unsigned int")]
        public uint memory_flags;
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate bool retro_environment_t([NativeTypeName("unsigned int")] uint cmd, [NativeTypeName("void *")] void* data);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate void retro_video_refresh_t([NativeTypeName("const void *")] void* data, [NativeTypeName("unsigned int")] uint width, [NativeTypeName("unsigned int")] uint height, [NativeTypeName("size_t")] UIntPtr pitch);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_audio_sample_t([NativeTypeName("int16_t")] short left, [NativeTypeName("int16_t")] short right);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: NativeTypeName("size_t")]
    public unsafe delegate UIntPtr retro_audio_sample_batch_t([NativeTypeName("const int16_t *")] short* data, [NativeTypeName("size_t")] UIntPtr frames);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void retro_input_poll_t();

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: NativeTypeName("int16_t")]
    public delegate short retro_input_state_t([NativeTypeName("unsigned int")] uint port, [NativeTypeName("unsigned int")] uint device, [NativeTypeName("unsigned int")] uint index, [NativeTypeName("unsigned int")] uint id);

    public static unsafe partial class RetroBindings
    {
        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_set_environment", ExactSpelling = true)]
        public static extern void set_environment([NativeTypeName("retro_environment_t")] IntPtr param0);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_set_video_refresh", ExactSpelling = true)]
        public static extern void set_video_refresh([NativeTypeName("retro_video_refresh_t")] IntPtr param0);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_set_audio_sample", ExactSpelling = true)]
        public static extern void set_audio_sample([NativeTypeName("retro_audio_sample_t")] IntPtr param0);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_set_audio_sample_batch", ExactSpelling = true)]
        public static extern void set_audio_sample_batch([NativeTypeName("retro_audio_sample_batch_t")] IntPtr param0);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_set_input_poll", ExactSpelling = true)]
        public static extern void set_input_poll([NativeTypeName("retro_input_poll_t")] IntPtr param0);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_set_input_state", ExactSpelling = true)]
        public static extern void set_input_state([NativeTypeName("retro_input_state_t")] IntPtr param0);

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_init", ExactSpelling = true)]
        public static extern void init();

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_deinit", ExactSpelling = true)]
        public static extern void deinit();

        [DllImport("core", CallingConvention = CallingConvention.Cdecl, EntryPoint = "retro_api_version", ExactSpelling = true)]
        [return: NativeTypeName("unsigned int")]
        public static extern uint api_version();
